# P6_MLOps_credit_scoring

./: .gitignore  README.md  main.py  mlflow.db  pyproject.toml
notebooks/: 01_exploration_donnees.ipynb  02_preparation_features.ipynb  03_modelisation_mlflow.ipynb  04_modelisation_validation_croisee.ipynb  05_optimisation_hyperparametres_seuil_metier.ipynb
reports/data_quality/: application_test_missing_values.csv  application_train_missing_values.csv  bureau_balance_missing_values.csv  bureau_missing_values.csv  columns_description_missing_values.csv  credit_card_balance_missing_values.csv  installments_payments_missing_values.csv  keys_summary.csv  modeling_dropped_columns.csv  pos_cash_balance_missing_values.csv  previous_application_missing_values.csv  processed_constant_columns.csv  processed_dataset_summary.csv  processed_high_missing_columns.csv  processed_highly_correlated_pairs.csv  processed_missing_values.csv  processed_target_correlations_pearson.csv  processed_target_correlations_spearman.csv  processed_target_distribution.csv  raw_tables_summary.csv  relations_summary.csv  sample_submission_missing_values.csv  target_distribution.csv
reports/optimization/: optuna_xgboost_trials.csv  xgboost_feature_importance_gain.csv  xgboost_optimized_cv_results_by_fold.csv  xgboost_optimized_threshold_curve.csv
scripts/: create_notebook_05.py
src/: config.py
src/data/: analyze_keys.py  analyze_processed_dataset.py  build_application_base.py  build_bureau_features.py  build_credit_card_features.py  build_final_dataset.py  build_installments_features.py  (+5 more)
(+14 files in other folders)
