[project]
name = "p6-mlops-credit-scoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "missingno>=0.5.2",
    "mlflow>=3.1,<4",
    "numpy>=2.5.0",
    "optuna>=4.9.0",
    "pandas>=2.2,<3",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
